--- a/html5-boilerplate_v9.0.0/css/style.css
+++ b/html5-boilerplate_v9.0.0/css/style.css
@@ -84,10 +84,10 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== *
-/*equalise for various browsers and change #header to header*/
+/*equalise for various browsers and change #header to header*
 div body header #content { margin:0; padding:0; border:0; 
 }
-/*PAGE LAYOUT*/
+/*PAGE LAYOUT*
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
 /*add display attributes for the semantic tags*
@@ -110,31 +110,31 @@ h3 { font-size:large; color:white; margin:0 0 6px 0;
 #leftcol { float:left; width: 310px; vertical-align:top; 
 }
 #rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
-}*/
+}*
 #midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
 #midcol img { margin-left:10px;
 }
-/*set nav block position and width*/
+/*set nav block position and width*
 nav { margin:10px 0px 10 0px; width:135px; float:right; 
 }
-/*Set un-ordered list style within the menu block only. This removes bullets*/
+/*Set un-ordered list style within the menu block only. This removes bullets*
 nav li { list-style-type:none; 
 }	
-/* set general side button styles */
+/* set general side button styles *
 nav li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
-/* set general anchor styles and include the zoom fix for IE6*/
+/* set general anchor styles and include the zoom fix for IE6*
 nav li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
-/* mouseout (default) */
+/* mouseout (default) *
 nav li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
 }
-/* mouseover */
+/* mouseover *
 nav li.btn a:hover { background: red;  color:white; border: 5px outset red;
 }
-/*mouse active*/
+/*mouse active*
 nav li.btn a:active { background:maroon;  border: 5px inset maroon; 
 }
 br.clear { 	clear:both; 
@@ -180,7 +180,7 @@ body.ui-mobile-viewport.ui-overlay-a { background:#FFF url(..//images/green-grad
 }
 ul { padding-left: 0;
 }
-/* end of style equalisation */
+/* end of style equalisation *
 p { 
 
     color: #000;
@@ -315,7 +315,7 @@ header#html5style2header.data {
     margin: 10px auto;
 }
 ul { padding-left: 0;}
-/* end of style equalisation */
+/* end of style equalisation *
 p { 
    
   margin:auto; 
@@ -331,7 +331,7 @@ div#inlineblockcontainer { border: 10px solid white;  background-clip: padding-b
 div#inlineblockcontent.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
 border-bottom:10px white solid; width: 904px; margin-top:-10px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
-*/
+*
 div#html5style2content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
 border-bottom:10px white solid; width: 904px; margin-top:0px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
@@ -385,7 +385,7 @@ header#html5style2header {width:920px; height:180px; padding:0; border:10px whit
 
 h1 { font-size:200%; color :white; position: relative; left:-150px; top: -10px; width:480px; 
 }
-*/
+*
 div#rosette { position:relative; left:750px; top:5px; }
 /*
 div#html5style2content { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
@@ -551,48 +551,48 @@ li.btn a:hover { background-color:blue; color:white;
 li.btn { width:110px;
 }
 /*SET THUMBNAIL GALLERY BLOCK*/
-/* Set general thumbnail styles */
+/* Set general thumbnail styles *
 #gallerypagecol-1 { position: absolute; top: 0; left: 0; width:85px;
 }
-/*place the first column on the page*/
+/*place the first column on the page*
 li { margin: 5px; list-style-type:none;
 }
 /*remove bullets from the un-ordered list elements and create the MouseOut state (default) - create and position a space for the larger images and 
-hide them*/
+hide them*
 #gallerypagecol-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px; visibility: hidden;
 }
-/* MouseOver state (hover)- this reveals larger picture */
+/* MouseOver state (hover)- this reveals larger picture *
 #gallerypagecol-1 a:hover { background: white; }
 #gallerypagecol-1 a:hover img.hid { visibility:visible;
 }
 /*----------------------------------------------------*/
-/* set 2nd column of thumbnails 85px further over to right*/
+/* set 2nd column of thumbnails 85px further over to right*
 #gallerypagecol-2 { position: absolute; top: 0; left: 85px; width:85px;
 }
 li { margin: 5px; list-style-type:none;
 }
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #gallerypagecol-2 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
 }
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #gallerypagecol-2 a:hover { background: white; }
 #gallerypagecol-2 a:hover img.hid { visibility:visible; }
-/*----------------------------------------------------*/
-/* set 3rd column of thumbnails 170px further over to right*/
+/*----------------------------------------------------*
+/* set 3rd column of thumbnails 170px further over to right*
 #gallerypagecol-3 { position: absolute; top: 0; left: 175px; width:95px; }
 li { margin: 5px; list-style-type:none;
 }
-/* MouseOut state (default) - hide larger picture */
+/* MouseOut state (default) - hide larger picture *
 #gallerypagecol-3 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
 }
-/* MouseOver state (hover)- reveal larger picture */
+/* MouseOver state (hover)- reveal larger picture *
 #gallerypagecol-3a:hover { background: white;
 }
 #gallerypagecol-3 a:hover img.hid { visibility:visible;
 }
 
 
-/* ###################################### *
+/* ###################################### */
 body {
   font-family: "Open Sans", sans-serif;
   color: #444444;
