--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -196,87 +196,8 @@ header, footer, section, article, nav { display:block;
 }
 /*SET FONTS*/
 span.small { font-size:small;
-}
-/*
-h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
-}
-h2 {font-size:large; font-family:"times new roman"; text-align:center;
-}
-/*PAGE LAYOUT*
-body {margin:auto; width:970px;
-}
-header { width:970px;
-}
-nav#gallerypagenav { float:left; margin-left:10px; width:115px;
-}
-nav#gallerypagenav ul { margin-left:0; border:0; width:115px;
-}
-/*set far right column for ads*
-div#gallerypagerightcol { width: 12em; float:right; text-align:center;
-}
-div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
-}
-/*set middle column for main content*
-div#gallerypagemidcol.data { margin-left:135px; margin-right:155px;
-}
-/*set gallery block position*
-div#gallerypagegallery-block { position:relative; left: 8em; top: -170px;
-}
-/*set footer*
-footer { clear:both; color:black; text-align:center; width:970px;
-}
-.clear { clear:both;
-}
-/*set menu buttons*
-li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold; padding:4px; margin-left:0; text-align:center; list-style-type:none; text-decoration:none; width:110px;
-}
-li.btn a:hover { background-color:blue; color:white;
-}
-li.btn { width:110px;
-}
-/*SET THUMBNAIL GALLERY BLOCK*/
-/* Set general thumbnail styles *
-#col-1 { position: absolute; top: 0; left: 0; width:85px;
-}
-/*place the first column on the page*
-li { margin: 5px; list-style-type:none;
-}
-/*remove bullets from the un-ordered list elements and create the 
-MouseOut state (default) - create and position a space for the larger images and 
-hide them*
-#col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px; visibility: hidden;
-}
-/* MouseOver state (hover)- this reveals larger picture *
-#col-1 a:hover { background: white; }
-#col-1 a:hover img.hid { visibility:visible;
-}
-/*----------------------------------------------------*/
-/* set 2nd column of thumbnails 85px further over to right*
-#col-2 { position: absolute; top: 0; left: 85px; width:85px;
-}
-li { margin: 5px; list-style-type:none;
-}
-/* MouseOut state (default) - hide larger picture *
-#col-2 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
-}
-/* MouseOver state (hover)- reveal larger picture *
-#col-2 a:hover { background: white; }
-#col-2 a:hover img.hid { visibility:visible; }
-/*----------------------------------------------------*/
-/* set 3rd column of thumbnails 170px further over to right*
-#col-3 { position: absolute; top: 0; left: 175px; width:95px; }
-li { margin: 5px; list-style-type:none;
-}
-/* MouseOut state (default) - hide larger picture *
-#col-3 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
-}
-/* MouseOver state (hover)- reveal larger picture *
-#col-3a:hover { background: white;
-}
-#col-3 a:hover img.hid { visibility:visible;
-}
-
-/*set attributes for consistent appearance in all browsers*/
+		   }
+/*set attributes for consistent appearance in all browsers*
 div.wrapper { 
     position: relative;
     top: 0em;
@@ -661,6 +582,94 @@ br.clear { clear:both;
 /*change #footer to footer */
 footer { clear:both; color:maroon; text-align:center;
 }
+
+
+
+/*add display attributes for the semantic tags*
+header, footer, section, article, nav { display:block;
+}
+/*SET FONTS*
+span.small { font-size:small;
+}
+/*
+h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
+}
+h2 {font-size:large; font-family:"times new roman"; text-align:center;
+}
+
+header { width:970px;
+}
+nav#gallerypagenav.data { float:left; margin-left:10px; width:115px;
+}
+nav#gallerypagenav.data ul { margin-left:0; border:0; width:115px;
+}
+/*set far right column for ads*/
+div#gallerypagerightcol { width: 12em; float:right; text-align:center;
+}
+div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
+}
+/*set middle column for main content*/
+div#gallerypagemidcol.data { margin-left:135px; margin-right:155px;
+}
+/*set gallery block position*/
+div#gallerypagegallery-block.data { position:relative; left: 30px; top: -39em;
+}
+/*set footer*/
+footer { clear:both; color:black; text-align:center; width:970px;
+}
+.clear { clear:both;
+}
+/*set menu buttons*/
+#gallerypagenav li.btn a { display:block; background-color :#66CCFF; color:black; font-weight:bold; padding:4px; margin-left:0; text-align:center; list-style-type:none; text-decoration:none; width:110px;
+}
+#gallerypagenav li.btn a:hover { background-color:blue; color:white;
+}
+#gallerypagenav li.btn { width:110px;
+}
+/*SET THUMBNAIL GALLERY BLOCK*/
+/* Set general thumbnail styles */
+#col-1 { position: absolute; top: 0; left: 0; width:85px;
+}
+/*place the first column on the page*/
+li { margin: 5px; list-style-type:none;
+}
+/*remove bullets from the un-ordered list elements and create the 
+MouseOut state (default) - create and position a space for the larger images and 
+hide them*/
+#col-1 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 330px; visibility: hidden;
+}
+/* MouseOver state (hover)- this reveals larger picture */
+#col-1 a:hover { background: white; }
+#col-1 a:hover img.hid { visibility:visible;
+}
+/*----------------------------------------------------*/
+/* set 2nd column of thumbnails 85px further over to right*/
+#col-2 { position: absolute; top: 0; left: 85px; width:85px;
+}
+li { margin: 5px; list-style-type:none;
+}
+/* MouseOut state (default) - hide larger picture */
+#col-2 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 245px; margin-left:0;visibility: hidden;
+}
+/* MouseOver state (hover)- reveal larger picture */
+#col-2 a:hover { background: white; }
+#col-2 a:hover img.hid { visibility:visible; }
+/*----------------------------------------------------*/
+/* set 3rd column of thumbnails 170px further over to right*/
+#col-3 { position: absolute; top: 0; left: 175px; width:95px; }
+li { margin: 5px; list-style-type:none;
+}
+/* MouseOut state (default) - hide larger picture */
+#col-3 a img.hid { width: 260px; height:390px; position: absolute; top: 10px; left: 155px; margin-left:0; visibility: hidden;
+}
+/* MouseOver state (hover)- reveal larger picture */
+#col-3a:hover { background: white;
+}
+#col-3 a:hover img.hid { visibility:visible;
+}
+/* Listing 2-6c. Conditional CSS for Listing 2-6a to Support Browser IE 7 (gallery-ie7.css)
+set the gallery block 10px further to the right
+*/
 
 /*equalise for various browsers and change #header to header*
 div body header #content { margin:0; padding:0; border:0; 
@@ -4637,6 +4646,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
