--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1,228 +1,4 @@
-/*set attributes for consistent appearance in all browsers*
-div.wrapper { 
-    position: relative;
-    top: 0em;
-    left: 0em;
-    border: 1px solid rgba(0, 0, 0, .1);
-    border-left-width: 0 !important;
-    border-width: 10px;
-    box-shadow: 0 .05em .25em rgba(0, 0, 0, .5);
-    color: white;
-    font-size: 100%;
-    text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
-    line-height: 1.5;
-    margin: 0 auto;
-	padding: .3em .8em;	 
-    text-shadow: 0 -.05em .05em rgba(0, 0, 0, .5);
-    width: 200%;
-    background: #58a linear-gradient(#FF9966, #58a);
-
-    clip-path:polygon(20px 0, calc(100% - 20px) 0, 100% 20px, 
-    100% calc(100% - 20px), calc(100% - 20px) 100%,
-    20px 100%, 0 calc(100% - 20px), 0 20px);
-}
-
-/* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css) 
-(The key items are picked out in bold type.) equalise for various browsers and change #header to header* 
-
-  */
-/*add display attributes for the semantic tags* 
-header, footer, section, article, nav { display:block; 
-} 
-/*remove the # from #header*/
-.header#html5styleheader.data {width:920px; height:180px; padding:0; border:10px white solid; 
-  background-position: center; /* Adjust as needed */
-  background-repeat: no-repeat; margin:10px auto; 
-}  
-/* Listing 8-5b. The CSS Style Sheet for Listing 8-5a (css3-text-shadow.css) 
-body {background-color:#99CCFF;
-}
-		   */
-#banner h1 { color: #fff; padding: 50px 0 0 20px; font-size: 300%; 
-text-shadow: 0.1em 0.1em 0.2em black;
-}
-#rosette { position:relative; left:750px; top: -359px; 
-} 
-#html5stylecontent { 
-	background:#81d9f6; 
-	border-left:10px white solid; 
-	border-right:10px white solid; 
-	border-bottom:10px white solid; 
-	width: 904px; position: relative; 
-	top: -21.1em; 
-	margin-top: 0px; 
-	margin-left:auto; 
-	margin-right:auto; 
-	padding:8px; 
-	font-size: large; color:maroon; 
-} 
-h2 { font-size: large; color: maroon; margin:0 0 10px 0; text-align: center; 
-} 
-h3 { font-size: large; color: #333; margin:0 0 6px 0; 
-} 
-#html5styleleftcol { float:left; width: 310px; vertical-align:top; 
-} 
-#html5stylerightcol { width: 135px; float:right; height: 252px; margin-right:10px; 
-} 
-#html5stylemidcol { margin-left:315px; margin-right:145px; margin-top:10px; 
-vertical-align:top; 
-} 
-/*set nav block position and width and remove the #menu item* 
-nav ul { margin: 35px 0 10px 0; width:135px; float:right; 
-} 
-/*Set un-ordered list style within the menu block only. This removes bullets*
-nav li { list-style-type:none; 
-} 
-/* set general side button styles * 
-li.btn { margin-bottom: 3px; text-align: center; width:130px; 
-}
-/* set general anchor styles and include the zoom fix for IE6*
-li.btn a { display: block; color: rgb(22, 22, 22); font-weight: bold; font-size: 100%; text-decoration: none; zoom:1; 
-} 
-/* specify mouse state styles */ 
-/* mouseout (default) *
-li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px; 
-} 
-/* mouseover *
-li.btn a:hover { background: red; color:white; border: 5px outset red; 
-} 
-/*mouse active* 
-li.btn a:active { background:maroon; border: 5px inset maroon; 
-} 
-br.clear { clear:both; 
-} 
-#midcol img { margin-left:10px; 
-} 
-/*change #footer to footer * 
-footer { clear:both; color:rgba(105, 13, 13,.5); text-align:center; 
-}
-footer { border: 2px solid black }
-.warning { color: maroon }
-.zebra {
-  background-color: #dddddd;
-  color: #666666;
-}
-
-tr.zebraHover {
-  background-color: #FFFACD;
-}
-
-/*set gallery block position*
-div#gallerypage-block { position:relative; left: 30px; top:10px; 
-}
-
-/*set images to have no borders*
-img {
-	border: none;
-}
-
-/* Set general thumbnail styles *
-#col-1 {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 85px;
-}
-
-/*place the column on the page*
-li {
-	margin: 5px;
-	list-style-type: none;
-}
-
-/*remove bullets from the list elements*
-/* MouseOut state (default) - create and position a space for the larger images and hide them*
-#col-1 a img.hid {
-	width: 250px;
-	height: 340px;
-	position: absolute;
-	top: 10px;
-	left: 400px;
-	visibility: hidden;
-}
-
-/* MouseOver state (hover)- reveal larger picture *
-#col-1 a:hover {
-	background: white;
-}
-
-#col-1 a:hover img.hid {
-	visibility: visible;
-}
-
-/*----------------------------------------------------*
-
-/* set 2nd column of thumbnails 85px further over to right*
-#col-2 {
-	position: absolute;
-	top: 0;
-	left: 85px;
-	width: 135px;
-}
-
-li {
-	margin: 5px;
-	list-style-type: none;
-}
-
-/* MouseOut state (default) - hide larger picture *
-#col-2 a img.hid {
-	width: 350px;
-	height: 265px;
-	position: absolute;
-	top: 10px;
-	left: 315px;
-	margin-left: 0;
-	visibility: hidden;
-}
-
-/* MouseOver state (hover)- reveal larger picture *
-#col-2 a:hover {
-	background: white;
-}
-
-#col-2 a:hover img.hid {
-	visibility: visible;
-}
-
-/*----------------------------------------------------*
-
-
-/* set 3rd column of thumbnails 170px further over to right*
-#col-3 {
-	position: absolute;
-	top: 0;
-	left: 230px;
-	width: 108px;
-}
-
-li {
-	margin: 5px;
-	list-style-type: none;
-}
-
-/* MouseOut state (default) - hide larger picture *
-#col-3 a img.hid {
-	width: 260px;
-	height: 260px;
-	position: absolute;
-	top: 10px;
-	left: 175px;
-	margin-left: 0;
-	visibility: hidden;
-}
-
-/* MouseOver state (hover)- reveal larger picture *
-#col-3 a:hover {
-	background: white;
-}
-
-#col-3 a:hover img.hid {
-	visibility: visible;
-}
-
-*/
-/*! HTML5 Boilerplate v9.0.0-RC1 | MIT License | https://html5boilerplate.com/ */
+I'm/*! HTML5 Boilerplate v9.0.0-RC1 | MIT License | https://html5boilerplate.com/ */
 
 /* main.css 3.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
 /*
@@ -4447,6 +4223,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
