--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -23,7 +23,7 @@ html.ui-mobile {
  * https://twitter.com/miketaylr/status/12228805301
  *
  * Customize the background color to match your design.
- */
+ *
 
 ::-moz-selection {
   background: #b3d4fc;
@@ -4223,6 +4223,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
