--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -95,10 +95,10 @@ equalise for various browsers and change #header to header*/
 
 div body header #content { margin:0; padding:0; border:0;
 }
-/*set attributes for consistent appearance in all browsers*/
+/*set attributes for consistent appearance in all browsers*
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
-/*set images to have no borders*/
+/*set images to have no borders*
 img {
 border:0;
 }
@@ -4223,6 +4223,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
