--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -422,26 +422,26 @@ h3 { font-size:large; color:rgba(0, 0, 0, 0.6); margin:0 0 6px 0;
 }
 #html5style2midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
-/* set side menu block position and width*
+/* set side menu block position and width*/
 nav#nav { margin:0px 9px 0 8px; width:135px; 
 }
-/*Set list style within the menu block only. This removes bullets*
+/*Set list style within the menu block only. This removes bullets*/
 nav#nav li { list-style-type:none; 
 }	
-/* set general side button styles *
+/* set general side button styles */
 nav#nav li { margin-bottom: 3px; text-align: center; width:130px;
 }
-/* set general anchor styles and include the zoom fix for IE6*
+/* set general anchor styles and include the zoom fix for IE6*/
 nav#nav li a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
-/* mouseout (default) *
+/* mouseout (default) */
 nav li a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
 }
-/* mouseover *
+/* mouseover */
 nav li a:hover { background: red;  color:white; border: 5px outset red;
 }
-/*mouse active*
+/*mouse active*/
 nav li a:active { background:maroon;  border: 5px inset maroon; 
 }
 br.clear { clear:both; 
@@ -4223,6 +4223,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
