--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -423,10 +423,10 @@ h3 { font-size:large; color:rgba(0, 0, 0, 0.6); margin:0 0 6px 0;
 #html5style2midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
 /* set side menu block position and width*/
-nav#nav { margin:0px 9px 0 8px; width:135px; 
+nav#html5style2nav { margin:0px 9px 0 8px; width:135px; 
 }
 /*Set list style within the menu block only. This removes bullets*/
-nav#nav li { list-style-type:none; 
+nav#html5style2nav li { list-style-type:none; 
 }	
 /* set general side button styles */
 nav#nav li { margin-bottom: 3px; text-align: center; width:130px;
@@ -453,21 +453,21 @@ footer { clear:both; color:maroon; text-align:center;
 /*
 Listing 4-1b. Applying the display:inline-block; Style to the Second Row of Buttons (inline-block.css)
 */
-/* Set styles to equalise the browser rendition*
+/* Set styles to equalise the browser rendition*/
 html, body, h1, h2, h3, h4, h5, p, ol, ul, li { padding: 0; margin: 0;
 }
 body { font-size: 100%; font-weight: normal;
 }
-/*equalise for various browsers and change #header to header*
+/*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
-/*add display attributes for the semantic tags*
+/*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
 
-/*remove the # from #header*
+/*remove the # from #header*/
 header#html5style2header.data {  
     width: 70%; 
     height: 180px;
@@ -479,7 +479,7 @@ header#html5style2header.data {
     margin: 10px auto;
 }
 ul { padding-left: 0;}
-/* end of style equalisation *
+/* end of style equalisation */
 p { 
    
   margin:auto; 
@@ -4223,6 +4223,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
