--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -10,8 +10,6 @@
 /* ==========================================================================
    Base styles: opinionated defaults
    ========================================================================== */
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
-@import url('https://fonts.googleapis.com/css?family=Raleway:300');
 html.ui-mobile {
   color: black;
   font-size: 1em;
@@ -85,7 +83,9 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-@import 'https://fonts.googleapis.com/css?family=Alegreya+Sans'; 
+/* @import 'https://fonts.googleapis.com/css?family=Alegreya+Sans'; */
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400');
+@import url('https://fonts.googleapis.com/css?family=Raleway:300');
 
 * {
 	margin: 0; border: 0; padding: 0;
@@ -3850,7 +3850,7 @@ div.wrapper {
 div header #content { margin:0; padding:0; border:0; 
 }
 body { background:#FFF url(../orris0/images/green-grad.jpg) repeat-x !important; margin:auto;
-    font-size: 100%; font-weight: normal;
+    font-size: 75%; font-weight: normal;
 }
 ul { padding-left: 0;
 }
