--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -119,7 +119,7 @@ header#html5style2header.data { margin-top: 0em; margin-left: 50px; height:90px;
 div#html5style2banner { width:362px; height:161px; padding:0; border:5px white solid; background: url(./bda-20.jpg); margin:10px auto; background-position: bottom;
 }
 /*
-h1 { font-size:300%; color :white; position: relative; left:36px; top: 13px; width:480px;
+h1#html5style2-h1 { font-size:300%; color :white; position: relative; left:36px; top: 13px; width:480px;
 }
 */
 #rosette { position:relative; left:750px; top:5px;
@@ -4227,6 +4227,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
