--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -484,7 +484,7 @@ header#html5style2header.data {
     background-image: url("../../bda-20.jpg");
     background-repeat: no-repeat;
     background-position: bottom;
-    margin: 10px auto;
+    margin: 12px;
 }
 ul { padding-left: 0;}
 /* end of style equalisation */
@@ -4227,6 +4227,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
