--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1,4 +1,4 @@
-/*! HTML5 Boilerplate v9.0.0-RC1 | MIT License | https://html5boilerplate.com/ *
+/*! HTML5 Boilerplate v9.0.0-RC1 | MIT License | https://html5boilerplate.com/ */
 
 /* main.css 3.0.0 | MIT License | https://github.com/h5bp/main.css#readme */
 /*
@@ -35,7 +35,7 @@ html.ui-mobile {
 }
 
 /*
- * A better looking default horizontal rule
+ * A better looking default horizontal rule */
  
 
 hr {
@@ -4229,6 +4229,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
