--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -3997,7 +3997,7 @@ h2 {
 */
 h3 {
   font-size: 100%;
-  color: #333;
+  color: white;
   margin: 0 0 6px 0;
 }
 /*
@@ -4229,6 +4229,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
