--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -118,8 +118,21 @@ header#html5style2header.data { margin-top: 0em; margin-left: 50px; height:90px;
 /* banner css*/
 div#html5style2banner { width:320px; height:65px; padding:0; border:5px white solid; background: url(./bda-20.jpg); margin:10px auto; background-position: bottom;
 }
-/*
+
 h1#html5style2-h1 { font-size:300%; color :white; position: relative; left:36px; top: 13px; width:480px;
+}
+
+/*Listing 3-6b. The Revised CSS for Re-positioning the Rosette (rosette.css) */
+body { background: #FFF url(images/green-grad.jpg) repeat-x; margin:auto;
+}
+header, nav, footer, article section { display:block;
+}
+header {width:920px; height:180px; padding:0; border:10px white solid; 
+background:url(images/header3.jpg); margin: 20px auto;
+}
+/*
+h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; 
+width:480px;
 }
 */
 #rosette { position:relative; left:750px; top:5px;
@@ -4229,6 +4242,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
