--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -113,7 +113,8 @@ border:0;
 /*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
-header#html5style2header.data { margin-top: 0em; margin-left: 50px; height:90px; padding:0; border:5px white solid; background: url(../../orris0/bda-20.jpg); background-position: bottom;
+header#html5style2header.data { width:920px; height:180px; padding:0; border:10px white solid; 
+background:url(images/header3.jpg); margin: 20px auto;
 }
 /* banner css*/
 div#html5style2banner { width:320px; height:65px; padding:0; border:5px white solid; background: url(./bda-20.jpg); margin:10px auto; background-position: bottom;
@@ -127,9 +128,7 @@ body { background: #FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
 header, nav, footer, article section { display:block;
 }
-header {width:920px; height:180px; padding:0; border:10px white solid; 
-background:url(images/header3.jpg); margin: 20px auto;
-}
+
 /*
 h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px; 
 width:480px;
@@ -4242,6 +4241,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
