--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -182,19 +182,19 @@ header, footer, section, article, nav { display:block;
 span.small { font-size:small;
 }
 
-h1 { font-size:x-large; font-family:"times new roman"; text-align:center;
+h1#gallerypageh1 { font-size:x-large; font-family:"times new roman"; text-align:center;
 }
-h2 {font-size:large; font-family:"times new roman"; text-align:center;
+h2#gallerypageh2 {font-size:large; font-family:"times new roman"; text-align:center;
 }
 
-header { width:970px;
+header#gallerypageheader.data { width:970px;
 }
 nav#gallerypagenav.data { float:left; margin-left:10px; width:115px;
 }
 nav#gallerypagenav.data ul { margin-left:0; border:0; width:115px;
 }
 /*set far right column for ads*/
-div#gallerypagerightcol { width: 12em; float:right; text-align:center;
+div#gallerypagerightcol { width: 150px; float:right; text-align:center;
 }
 div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 }
@@ -202,10 +202,10 @@ div#gallerypagerightcol p.advert {font-size:small; margin-top:190px;
 div#gallerypagemidcol.data { margin-left:135px; margin-right:155px;
 }
 /*set gallery block position*/
-div#gallerypagegallery-block.data { position:relative; left: 30px; top: -31em;
+div#gallerypagegallery-block.data { position:relative; left: 30px; top: 10px;
 }
 /*set footer*/
-footer { clear:both; color:black; text-align:center; width:970px;
+footer#gallerypagefooter { clear:both; color:black; text-align:center; width:970px;
 }
 .clear { clear:both;
 }
@@ -4234,6 +4234,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
