--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -144,26 +144,26 @@ div#html5style2rightcol { width: 135px; float:right; height: 252px; margin-right
 div#html5style2midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top;
 }
 /*set nav block position and width and remove the #menu item*/
-nav#html5style2nav,data ul { margin: -269px 0 10px 0; width:135px; float:right;
+nav#html5style2nav.data ul { margin: 10px 0 10px 0; width:135px; float:right;
 }
 /*Set un-ordered list style within the menu block only. This removes bullets*/
 nav#html5style2nav.data li { list-style-type:none;
 }
 /* set general side button styles */
-li.btn { margin-bottom: 3px; text-align: center; width:130px;
+nav#html5style2nav.data li.btn { margin-bottom: 3px; text-align: center; width:130px;
 }
 /* set general anchor styles and include the zoom fix for IE6*/
-li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
+nav#html5style2nav.data li.btn a { display: block; color: white; font-weight: bold; text-decoration: none; zoom:1;
 }
 /* specify mouse state styles */
 /* mouseout (default) */
-li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
+nav#html5style2nav.data li.btn a { background:#559a55; color: white; border: 5px outset #559a55; padding-bottom:3px;
 }
 /* mouseover */
-li.btn a:hover { background: red; color:white; border: 5px outset red;
+nav#html5style2nav.data li.btn a:hover { background: red; color:white; border: 5px outset red;
 }
 /*mouse active*/
-li.btn a:active { background:maroon; border: 5px inset maroon;
+nav#html5style2nav.data li.btn a:active { background:maroon; border: 5px inset maroon;
 }
 br.clear { clear:both;
 }
@@ -4234,6 +4234,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
