--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -103,7 +103,7 @@ equalise for various browsers and change #header to header*/
 
 div body header #content { margin:0; padding:0; border:0;
 }
-/*set attributes for consistent appearance in all browsers*
+/*set attributes for consistent appearance in all browsers*/
 html, body, p, ul, li, h1, h2 { margin:0; padding:0;
 }
 /*set images to have no borders*/
@@ -114,7 +114,7 @@ border:0;
 header, footer, section, article, nav { display:block;
 }
 header#html5style2header.data { width:970px; max-width:970px; min-width:900px; height:180px; padding:0; border:10px white solid; 
-background:url(images/header3.jpg); margin-left:40px;
+background:url(images/header3.jpg); margin-left:10px;
 }
 /* banner css*/
 div#html5style2banner { width:320px; height:65px; padding:0; border:5px white solid; background: url(./bda-20.jpg); margin:10px auto; background-position: bottom;
@@ -4239,6 +4239,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
