--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -326,7 +326,7 @@ img { margin-left:10px;
 footer { clear:both; color:maroon; text-align:center; border: 2px solid black;
 }
 
-*/
+*
 div.wrapper { 
     position: relative; 
     top: 0; 
@@ -438,9 +438,9 @@ h3 { font-size:large; color:rgba(0, 0, 0, 0.6); margin:0 0 6px 0;
 }
 #html5style2rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
 }
-#html5style2midcol { 	margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
+#html5style2midcol { margin-left:315px; margin-right:145px; margin-top:10px; vertical-align:top; 
 }
-/* set side menu block position and width*/
+/* set side menu block position and width*
 nav#html5style2nav { margin:0px 9px 0 8px; width:135px; 
 }
 /*Set list style within the menu block only. This removes bullets*/
@@ -4239,6 +4239,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
