--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -113,7 +113,7 @@ border:0;
 /*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
-header#html5style2header.data { width:970px; max-width:970px; min-width:900px; height:180px; padding:0; border:10px white solid; background:url(images/header3.jpg); margin-left: 2px;
+header#inlineblockheader.data header#header.row {width:100%; height:80px; color:black; background-color:#FFCC00; padding-top:10px;
 }
 
 h1#html5style2h1 { font-size:300%; color :white; position: relative; left:15%; top: 55px; width:480px;
@@ -4235,6 +4235,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
