--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -170,7 +170,7 @@ br.clear { clear:both;
 #html5style2midcol img { margin-left:10px;
 }
 /*change #footer to footer */
-footer class="data" id="html5style2footer"> { clear:both; color:maroon; text-align:center;
+footer { clear:both; color:maroon; text-align:center;
 }
 
 
