--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -1958,7 +1958,7 @@ header {
       height: 14em; } }
   @media screen and (min-width: 62.5em) {
     header {
-      position: fixed; }
+      position: relative; }
       header .inner {
         padding-left: 0;
         padding-right: 0; } }
