--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -124,13 +124,8 @@ body { background: #FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 
 #rosette { position:relative; left:85%; top:120px;
 }
-
-div#html5style2content { 
-	background-color:transparent; 
-	border-left:10px white solid; 
-	border-right:10px white solid; 
-	border-bottom:10px white solid; 
-	width: 970px; margin-top:-10px; margin-left: auto; margin-right:auto; /* margin-left: 20px; margin-top: 170px; */ padding:8px; font-size:medium; color:maroon;
+div#html5style2content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
+border-bottom:10px white solid; width: 920px; margin-top:-29px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
 
 h2#html5style2h2 { font-size: x-large; color: white; margin: 0 0 10px 0; /* margin-left:-175px; */
