--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -124,10 +124,12 @@ body { background: #FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 
 #rosette { position:relative; left:85%; top:120px;
 }
+/*
 div#html5style2content.data { background-color:transparent; border-left:10px white solid; border-right:10px white solid; 
 border-bottom:10px white solid; width: 920px; margin-top:-39px; margin-left:auto; margin-right:auto; padding:8px; font-size:medium; color:maroon; 
 }
-
+*/
+/* ====== h2 ====== */
 h2#html5style2h2 { font-size: x-large; color: white; margin: 0 0 10px 0; /* margin-left:-175px; */
 }
 h3#html5style2h3 { font-size:large; color: white; margin:0 0 6px 0;
@@ -4229,6 +4231,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
