--- a/CSS/HTML5-style-2.css
+++ b/CSS/HTML5-style-2.css
@@ -565,7 +565,7 @@ body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 header, footer, section, article, nav { display:block; 
 }
 /*remove the # from #header*/
-header#html5style2header {width:920px; height:180px; padding:0; border:10px white solid; 
+header#html5style2header.data {width:920px; height:180px; padding:0; border:10px white solid; 
   background: url(images/header3.jpg); margin:10px auto; 
 }
 
@@ -625,12 +625,12 @@ div#html5style2footer { clear:both; color:maroon; text-align:center;
 /* Listing 1-7b. The Revised CSS Sheet for Figure 1-7 (html5-style-2.css)
 (The key items are picked out in bold type.) */
 
-/*equalise for various browsers and change #header to header*
+/*equalise for various browsers and change #header to header*/
 div body header #content { margin:0; padding:0; border:0;
 }
 body { background:#FFF url(images/green-grad.jpg) repeat-x; margin:auto;
 }
-/*add display attributes for the semantic tags*
+/*add display attributes for the semantic tags*/
 header, footer, section, article, nav { display:block;
 }
 
@@ -4245,6 +4245,7 @@ footer#html5style2footer {
     page-break-after: avoid;
   }
 }
+
 
 
 
